@@ -1,3 +1,9 @@
+3 Aug 2009 (svn.debian.org/tux4kids - revision 1346)
+[Sarah Frisk <ssfrisk@gmail.com> ]
+	- Added button text
+	- made it so that the New Word List function is only
+	called when someone clicks on the New' button
+
 3 Aug 2009 (svn.debian.org/tux4kids - revision 1344)
 [Sarah Frisk <ssfrisk@gmail.com> ]
 	- Set all buttons in editor to the wordlist_button, which is
